parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    DOUBLEQUOTE
    ELSE_IF
    PERIOD
    POINTER
    QUOTE

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list func_declaration
Rule 3     declaration_list -> declaration_list declaration
Rule 4     declaration_list -> empty
Rule 5     func_declaration -> type ID LPAREN params RPAREN stmt_block
Rule 6     func_declaration -> type TIMES ID LPAREN params RPAREN stmt_block
Rule 7     func_declaration -> type MAIN LPAREN params RPAREN stmt_block
Rule 8     params -> VOID
Rule 9     params -> param_list
Rule 10    param_list -> param
Rule 11    param_list -> param_list COMMA param
Rule 12    param -> type ID
Rule 13    param -> type TIMES ID
Rule 14    genstmt -> mstmt
Rule 15    genstmt -> umstmt
Rule 16    mstmt -> IF LPAREN expr RPAREN mstmt ELSE mstmt
Rule 17    mstmt -> stmt
Rule 18    umstmt -> IF LPAREN expr RPAREN genstmt
Rule 19    umstmt -> IF LPAREN expr RPAREN mstmt ELSE umstmt
Rule 20    stmt -> expr SEMICOLON
Rule 21    stmt -> declaration SEMICOLON
Rule 22    stmt -> stmt_block
Rule 23    stmt -> stmt_forloop
Rule 24    stmt -> stmt_return
Rule 25    stmt -> SEMICOLON
Rule 26    stmt -> expr error
Rule 27    stmt -> PRINT LPAREN argument_list RPAREN
Rule 28    declaration -> declaration COMMA idbracket
Rule 29    declaration -> declaration COMMA TIMES idbracket
Rule 30    declaration -> type idbracket
Rule 31    declaration -> type TIMES idbracket
Rule 32    idbracket -> ID
Rule 33    idbracket -> ID LBRACKET INUM RBRACKET
Rule 34    type -> INT
Rule 35    type -> FLOAT
Rule 36    type -> VOID
Rule 37    stmt_block -> LBRACE stmt_list RBRACE
Rule 38    stmt_list -> stmt_list genstmt
Rule 39    stmt_list -> empty
Rule 40    stmt_forloop -> FOR LPAREN expr SEMICOLON expr SEMICOLON expr RPAREN stmt
Rule 41    stmt_return -> RETURN expr SEMICOLON
Rule 42    stmt_return -> RETURN SEMICOLON
Rule 43    expr -> ID EQUAL expr
Rule 44    expr -> ID LBRACKET arith_expr RBRACKET EQUAL expr
Rule 45    expr -> TIMES ID EQUAL expr
Rule 46    expr -> incr_expr
Rule 47    expr -> basic_expr
Rule 48    basic_expr -> basic_expr compare arith_expr
Rule 49    basic_expr -> arith_expr
Rule 50    compare -> EQ
Rule 51    compare -> NEQ
Rule 52    compare -> GT
Rule 53    compare -> LT
Rule 54    incr_expr -> ID INCREMENT
Rule 55    incr_expr -> INCREMENT ID
Rule 56    arith_expr -> MINUS arith_expr
Rule 57    arith_expr -> LPAREN arith_expr RPAREN
Rule 58    arith_expr -> arith_expr PLUS arith_expr
Rule 59    arith_expr -> arith_expr MINUS arith_expr
Rule 60    arith_expr -> arith_expr TIMES arith_expr
Rule 61    arith_expr -> arith_expr DIV arith_expr
Rule 62    arith_expr -> ID
Rule 63    arith_expr -> FNUM
Rule 64    arith_expr -> INUM
Rule 65    arith_expr -> TIMES ID
Rule 66    arith_expr -> ADDRESS ID
Rule 67    arith_expr -> ID LBRACKET arith_expr RBRACKET
Rule 68    arith_expr -> TIMES ID LBRACKET arith_expr RBRACKET
Rule 69    arith_expr -> ID LPAREN argument_list RPAREN
Rule 70    argument_list -> argument
Rule 71    argument_list -> argument_list COMMA argument
Rule 72    argument -> empty
Rule 73    argument -> arith_expr
Rule 74    argument -> LITERAL
Rule 75    argument -> error
Rule 76    empty -> <empty>

Terminals, with rules where they appear

ADDRESS              : 66
COLON                : 
COMMA                : 11 28 29 71
DIV                  : 61
DOUBLEQUOTE          : 
ELSE                 : 16 19
ELSE_IF              : 
EQ                   : 50
EQUAL                : 43 44 45
FLOAT                : 35
FNUM                 : 63
FOR                  : 40
GT                   : 52
ID                   : 5 6 12 13 32 33 43 44 45 54 55 62 65 66 67 68 69
IF                   : 16 18 19
INCREMENT            : 54 55
INT                  : 34
INUM                 : 33 64
LBRACE               : 37
LBRACKET             : 33 44 67 68
LITERAL              : 74
LPAREN               : 5 6 7 16 18 19 27 40 57 69
LT                   : 53
MAIN                 : 7
MINUS                : 56 59
NEQ                  : 51
PERIOD               : 
PLUS                 : 58
POINTER              : 
PRINT                : 27
QUOTE                : 
RBRACE               : 37
RBRACKET             : 33 44 67 68
RETURN               : 41 42
RPAREN               : 5 6 7 16 18 19 27 40 57 69
SEMICOLON            : 20 21 25 40 40 41 42
TIMES                : 6 13 29 31 45 60 65 68
VOID                 : 8 36
error                : 26 75

Nonterminals, with rules where they appear

argument             : 70 71
argument_list        : 27 69 71
arith_expr           : 44 48 49 56 57 58 58 59 59 60 60 61 61 67 68 73
basic_expr           : 47 48
compare              : 48
declaration          : 3 21 28 29
declaration_list     : 1 2 3
empty                : 4 39 72
expr                 : 16 18 19 20 26 40 40 40 41 43 44 45
func_declaration     : 2
genstmt              : 18 38
idbracket            : 28 29 30 31
incr_expr            : 46
mstmt                : 14 16 16 19
param                : 10 11
param_list           : 9 11
params               : 5 6 7
program              : 0
stmt                 : 17 40
stmt_block           : 5 6 7 22
stmt_forloop         : 23
stmt_list            : 37 38
stmt_return          : 24
type                 : 5 6 7 12 13 30 31
umstmt               : 15 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list func_declaration
    (3) declaration_list -> . declaration_list declaration
    (4) declaration_list -> . empty
    (76) empty -> .

    INT             reduce using rule 76 (empty -> .)
    FLOAT           reduce using rule 76 (empty -> .)
    VOID            reduce using rule 76 (empty -> .)
    $end            reduce using rule 76 (empty -> .)

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . func_declaration
    (3) declaration_list -> declaration_list . declaration
    (5) func_declaration -> . type ID LPAREN params RPAREN stmt_block
    (6) func_declaration -> . type TIMES ID LPAREN params RPAREN stmt_block
    (7) func_declaration -> . type MAIN LPAREN params RPAREN stmt_block
    (28) declaration -> . declaration COMMA idbracket
    (29) declaration -> . declaration COMMA TIMES idbracket
    (30) declaration -> . type idbracket
    (31) declaration -> . type TIMES idbracket
    (34) type -> . INT
    (35) type -> . FLOAT
    (36) type -> . VOID

    $end            reduce using rule 1 (program -> declaration_list .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    VOID            shift and go to state 9

    func_declaration               shift and go to state 4
    declaration                    shift and go to state 5
    type                           shift and go to state 6

state 3

    (4) declaration_list -> empty .

    INT             reduce using rule 4 (declaration_list -> empty .)
    FLOAT           reduce using rule 4 (declaration_list -> empty .)
    VOID            reduce using rule 4 (declaration_list -> empty .)
    $end            reduce using rule 4 (declaration_list -> empty .)


state 4

    (2) declaration_list -> declaration_list func_declaration .

    INT             reduce using rule 2 (declaration_list -> declaration_list func_declaration .)
    FLOAT           reduce using rule 2 (declaration_list -> declaration_list func_declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list func_declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list func_declaration .)


state 5

    (3) declaration_list -> declaration_list declaration .
    (28) declaration -> declaration . COMMA idbracket
    (29) declaration -> declaration . COMMA TIMES idbracket

    INT             reduce using rule 3 (declaration_list -> declaration_list declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration_list declaration .)
    COMMA           shift and go to state 10


state 6

    (5) func_declaration -> type . ID LPAREN params RPAREN stmt_block
    (6) func_declaration -> type . TIMES ID LPAREN params RPAREN stmt_block
    (7) func_declaration -> type . MAIN LPAREN params RPAREN stmt_block
    (30) declaration -> type . idbracket
    (31) declaration -> type . TIMES idbracket
    (32) idbracket -> . ID
    (33) idbracket -> . ID LBRACKET INUM RBRACKET

    ID              shift and go to state 11
    TIMES           shift and go to state 12
    MAIN            shift and go to state 13

    idbracket                      shift and go to state 14

state 7

    (34) type -> INT .

    ID              reduce using rule 34 (type -> INT .)
    TIMES           reduce using rule 34 (type -> INT .)
    MAIN            reduce using rule 34 (type -> INT .)


state 8

    (35) type -> FLOAT .

    ID              reduce using rule 35 (type -> FLOAT .)
    TIMES           reduce using rule 35 (type -> FLOAT .)
    MAIN            reduce using rule 35 (type -> FLOAT .)


state 9

    (36) type -> VOID .

    ID              reduce using rule 36 (type -> VOID .)
    TIMES           reduce using rule 36 (type -> VOID .)
    MAIN            reduce using rule 36 (type -> VOID .)


state 10

    (28) declaration -> declaration COMMA . idbracket
    (29) declaration -> declaration COMMA . TIMES idbracket
    (32) idbracket -> . ID
    (33) idbracket -> . ID LBRACKET INUM RBRACKET

    TIMES           shift and go to state 16
    ID              shift and go to state 17

    idbracket                      shift and go to state 15

state 11

    (5) func_declaration -> type ID . LPAREN params RPAREN stmt_block
    (32) idbracket -> ID .
    (33) idbracket -> ID . LBRACKET INUM RBRACKET

    LPAREN          shift and go to state 18
    COMMA           reduce using rule 32 (idbracket -> ID .)
    INT             reduce using rule 32 (idbracket -> ID .)
    FLOAT           reduce using rule 32 (idbracket -> ID .)
    VOID            reduce using rule 32 (idbracket -> ID .)
    $end            reduce using rule 32 (idbracket -> ID .)
    LBRACKET        shift and go to state 19


state 12

    (6) func_declaration -> type TIMES . ID LPAREN params RPAREN stmt_block
    (31) declaration -> type TIMES . idbracket
    (32) idbracket -> . ID
    (33) idbracket -> . ID LBRACKET INUM RBRACKET

    ID              shift and go to state 20

    idbracket                      shift and go to state 21

state 13

    (7) func_declaration -> type MAIN . LPAREN params RPAREN stmt_block

    LPAREN          shift and go to state 22


state 14

    (30) declaration -> type idbracket .

    COMMA           reduce using rule 30 (declaration -> type idbracket .)
    INT             reduce using rule 30 (declaration -> type idbracket .)
    FLOAT           reduce using rule 30 (declaration -> type idbracket .)
    VOID            reduce using rule 30 (declaration -> type idbracket .)
    $end            reduce using rule 30 (declaration -> type idbracket .)
    SEMICOLON       reduce using rule 30 (declaration -> type idbracket .)


state 15

    (28) declaration -> declaration COMMA idbracket .

    COMMA           reduce using rule 28 (declaration -> declaration COMMA idbracket .)
    INT             reduce using rule 28 (declaration -> declaration COMMA idbracket .)
    FLOAT           reduce using rule 28 (declaration -> declaration COMMA idbracket .)
    VOID            reduce using rule 28 (declaration -> declaration COMMA idbracket .)
    $end            reduce using rule 28 (declaration -> declaration COMMA idbracket .)
    SEMICOLON       reduce using rule 28 (declaration -> declaration COMMA idbracket .)


state 16

    (29) declaration -> declaration COMMA TIMES . idbracket
    (32) idbracket -> . ID
    (33) idbracket -> . ID LBRACKET INUM RBRACKET

    ID              shift and go to state 17

    idbracket                      shift and go to state 23

state 17

    (32) idbracket -> ID .
    (33) idbracket -> ID . LBRACKET INUM RBRACKET

    COMMA           reduce using rule 32 (idbracket -> ID .)
    INT             reduce using rule 32 (idbracket -> ID .)
    FLOAT           reduce using rule 32 (idbracket -> ID .)
    VOID            reduce using rule 32 (idbracket -> ID .)
    $end            reduce using rule 32 (idbracket -> ID .)
    SEMICOLON       reduce using rule 32 (idbracket -> ID .)
    LBRACKET        shift and go to state 19


state 18

    (5) func_declaration -> type ID LPAREN . params RPAREN stmt_block
    (8) params -> . VOID
    (9) params -> . param_list
    (10) param_list -> . param
    (11) param_list -> . param_list COMMA param
    (12) param -> . type ID
    (13) param -> . type TIMES ID
    (34) type -> . INT
    (35) type -> . FLOAT
    (36) type -> . VOID

    VOID            shift and go to state 26
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    type                           shift and go to state 24
    params                         shift and go to state 25
    param_list                     shift and go to state 27
    param                          shift and go to state 28

state 19

    (33) idbracket -> ID LBRACKET . INUM RBRACKET

    INUM            shift and go to state 29


state 20

    (6) func_declaration -> type TIMES ID . LPAREN params RPAREN stmt_block
    (32) idbracket -> ID .
    (33) idbracket -> ID . LBRACKET INUM RBRACKET

    LPAREN          shift and go to state 30
    COMMA           reduce using rule 32 (idbracket -> ID .)
    INT             reduce using rule 32 (idbracket -> ID .)
    FLOAT           reduce using rule 32 (idbracket -> ID .)
    VOID            reduce using rule 32 (idbracket -> ID .)
    $end            reduce using rule 32 (idbracket -> ID .)
    LBRACKET        shift and go to state 19


state 21

    (31) declaration -> type TIMES idbracket .

    COMMA           reduce using rule 31 (declaration -> type TIMES idbracket .)
    INT             reduce using rule 31 (declaration -> type TIMES idbracket .)
    FLOAT           reduce using rule 31 (declaration -> type TIMES idbracket .)
    VOID            reduce using rule 31 (declaration -> type TIMES idbracket .)
    $end            reduce using rule 31 (declaration -> type TIMES idbracket .)
    SEMICOLON       reduce using rule 31 (declaration -> type TIMES idbracket .)


state 22

    (7) func_declaration -> type MAIN LPAREN . params RPAREN stmt_block
    (8) params -> . VOID
    (9) params -> . param_list
    (10) param_list -> . param
    (11) param_list -> . param_list COMMA param
    (12) param -> . type ID
    (13) param -> . type TIMES ID
    (34) type -> . INT
    (35) type -> . FLOAT
    (36) type -> . VOID

    VOID            shift and go to state 26
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    type                           shift and go to state 24
    params                         shift and go to state 31
    param_list                     shift and go to state 27
    param                          shift and go to state 28

state 23

    (29) declaration -> declaration COMMA TIMES idbracket .

    COMMA           reduce using rule 29 (declaration -> declaration COMMA TIMES idbracket .)
    INT             reduce using rule 29 (declaration -> declaration COMMA TIMES idbracket .)
    FLOAT           reduce using rule 29 (declaration -> declaration COMMA TIMES idbracket .)
    VOID            reduce using rule 29 (declaration -> declaration COMMA TIMES idbracket .)
    $end            reduce using rule 29 (declaration -> declaration COMMA TIMES idbracket .)
    SEMICOLON       reduce using rule 29 (declaration -> declaration COMMA TIMES idbracket .)


state 24

    (12) param -> type . ID
    (13) param -> type . TIMES ID

    ID              shift and go to state 32
    TIMES           shift and go to state 33


state 25

    (5) func_declaration -> type ID LPAREN params . RPAREN stmt_block

    RPAREN          shift and go to state 34


state 26

    (8) params -> VOID .
    (36) type -> VOID .

    RPAREN          reduce using rule 8 (params -> VOID .)
    ID              reduce using rule 36 (type -> VOID .)
    TIMES           reduce using rule 36 (type -> VOID .)


state 27

    (9) params -> param_list .
    (11) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 9 (params -> param_list .)
    COMMA           shift and go to state 35


state 28

    (10) param_list -> param .

    COMMA           reduce using rule 10 (param_list -> param .)
    RPAREN          reduce using rule 10 (param_list -> param .)


state 29

    (33) idbracket -> ID LBRACKET INUM . RBRACKET

    RBRACKET        shift and go to state 36


state 30

    (6) func_declaration -> type TIMES ID LPAREN . params RPAREN stmt_block
    (8) params -> . VOID
    (9) params -> . param_list
    (10) param_list -> . param
    (11) param_list -> . param_list COMMA param
    (12) param -> . type ID
    (13) param -> . type TIMES ID
    (34) type -> . INT
    (35) type -> . FLOAT
    (36) type -> . VOID

    VOID            shift and go to state 26
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    type                           shift and go to state 24
    params                         shift and go to state 37
    param_list                     shift and go to state 27
    param                          shift and go to state 28

state 31

    (7) func_declaration -> type MAIN LPAREN params . RPAREN stmt_block

    RPAREN          shift and go to state 38


state 32

    (12) param -> type ID .

    COMMA           reduce using rule 12 (param -> type ID .)
    RPAREN          reduce using rule 12 (param -> type ID .)


state 33

    (13) param -> type TIMES . ID

    ID              shift and go to state 39


state 34

    (5) func_declaration -> type ID LPAREN params RPAREN . stmt_block
    (37) stmt_block -> . LBRACE stmt_list RBRACE

    LBRACE          shift and go to state 41

    stmt_block                     shift and go to state 40

state 35

    (11) param_list -> param_list COMMA . param
    (12) param -> . type ID
    (13) param -> . type TIMES ID
    (34) type -> . INT
    (35) type -> . FLOAT
    (36) type -> . VOID

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    VOID            shift and go to state 9

    param                          shift and go to state 42
    type                           shift and go to state 24

state 36

    (33) idbracket -> ID LBRACKET INUM RBRACKET .

    COMMA           reduce using rule 33 (idbracket -> ID LBRACKET INUM RBRACKET .)
    INT             reduce using rule 33 (idbracket -> ID LBRACKET INUM RBRACKET .)
    FLOAT           reduce using rule 33 (idbracket -> ID LBRACKET INUM RBRACKET .)
    VOID            reduce using rule 33 (idbracket -> ID LBRACKET INUM RBRACKET .)
    $end            reduce using rule 33 (idbracket -> ID LBRACKET INUM RBRACKET .)
    SEMICOLON       reduce using rule 33 (idbracket -> ID LBRACKET INUM RBRACKET .)


state 37

    (6) func_declaration -> type TIMES ID LPAREN params . RPAREN stmt_block

    RPAREN          shift and go to state 43


state 38

    (7) func_declaration -> type MAIN LPAREN params RPAREN . stmt_block
    (37) stmt_block -> . LBRACE stmt_list RBRACE

    LBRACE          shift and go to state 41

    stmt_block                     shift and go to state 44

state 39

    (13) param -> type TIMES ID .

    COMMA           reduce using rule 13 (param -> type TIMES ID .)
    RPAREN          reduce using rule 13 (param -> type TIMES ID .)


state 40

    (5) func_declaration -> type ID LPAREN params RPAREN stmt_block .

    INT             reduce using rule 5 (func_declaration -> type ID LPAREN params RPAREN stmt_block .)
    FLOAT           reduce using rule 5 (func_declaration -> type ID LPAREN params RPAREN stmt_block .)
    VOID            reduce using rule 5 (func_declaration -> type ID LPAREN params RPAREN stmt_block .)
    $end            reduce using rule 5 (func_declaration -> type ID LPAREN params RPAREN stmt_block .)


state 41

    (37) stmt_block -> LBRACE . stmt_list RBRACE
    (38) stmt_list -> . stmt_list genstmt
    (39) stmt_list -> . empty
    (76) empty -> .

    RBRACE          reduce using rule 76 (empty -> .)
    IF              reduce using rule 76 (empty -> .)
    SEMICOLON       reduce using rule 76 (empty -> .)
    PRINT           reduce using rule 76 (empty -> .)
    ID              reduce using rule 76 (empty -> .)
    TIMES           reduce using rule 76 (empty -> .)
    LBRACE          reduce using rule 76 (empty -> .)
    FOR             reduce using rule 76 (empty -> .)
    RETURN          reduce using rule 76 (empty -> .)
    INCREMENT       reduce using rule 76 (empty -> .)
    INT             reduce using rule 76 (empty -> .)
    FLOAT           reduce using rule 76 (empty -> .)
    VOID            reduce using rule 76 (empty -> .)
    MINUS           reduce using rule 76 (empty -> .)
    LPAREN          reduce using rule 76 (empty -> .)
    FNUM            reduce using rule 76 (empty -> .)
    INUM            reduce using rule 76 (empty -> .)
    ADDRESS         reduce using rule 76 (empty -> .)

    stmt_list                      shift and go to state 45
    empty                          shift and go to state 46

state 42

    (11) param_list -> param_list COMMA param .

    COMMA           reduce using rule 11 (param_list -> param_list COMMA param .)
    RPAREN          reduce using rule 11 (param_list -> param_list COMMA param .)


state 43

    (6) func_declaration -> type TIMES ID LPAREN params RPAREN . stmt_block
    (37) stmt_block -> . LBRACE stmt_list RBRACE

    LBRACE          shift and go to state 41

    stmt_block                     shift and go to state 47

state 44

    (7) func_declaration -> type MAIN LPAREN params RPAREN stmt_block .

    INT             reduce using rule 7 (func_declaration -> type MAIN LPAREN params RPAREN stmt_block .)
    FLOAT           reduce using rule 7 (func_declaration -> type MAIN LPAREN params RPAREN stmt_block .)
    VOID            reduce using rule 7 (func_declaration -> type MAIN LPAREN params RPAREN stmt_block .)
    $end            reduce using rule 7 (func_declaration -> type MAIN LPAREN params RPAREN stmt_block .)


state 45

    (37) stmt_block -> LBRACE stmt_list . RBRACE
    (38) stmt_list -> stmt_list . genstmt
    (14) genstmt -> . mstmt
    (15) genstmt -> . umstmt
    (16) mstmt -> . IF LPAREN expr RPAREN mstmt ELSE mstmt
    (17) mstmt -> . stmt
    (18) umstmt -> . IF LPAREN expr RPAREN genstmt
    (19) umstmt -> . IF LPAREN expr RPAREN mstmt ELSE umstmt
    (20) stmt -> . expr SEMICOLON
    (21) stmt -> . declaration SEMICOLON
    (22) stmt -> . stmt_block
    (23) stmt -> . stmt_forloop
    (24) stmt -> . stmt_return
    (25) stmt -> . SEMICOLON
    (26) stmt -> . expr error
    (27) stmt -> . PRINT LPAREN argument_list RPAREN
    (43) expr -> . ID EQUAL expr
    (44) expr -> . ID LBRACKET arith_expr RBRACKET EQUAL expr
    (45) expr -> . TIMES ID EQUAL expr
    (46) expr -> . incr_expr
    (47) expr -> . basic_expr
    (28) declaration -> . declaration COMMA idbracket
    (29) declaration -> . declaration COMMA TIMES idbracket
    (30) declaration -> . type idbracket
    (31) declaration -> . type TIMES idbracket
    (37) stmt_block -> . LBRACE stmt_list RBRACE
    (40) stmt_forloop -> . FOR LPAREN expr SEMICOLON expr SEMICOLON expr RPAREN stmt
    (41) stmt_return -> . RETURN expr SEMICOLON
    (42) stmt_return -> . RETURN SEMICOLON
    (54) incr_expr -> . ID INCREMENT
    (55) incr_expr -> . INCREMENT ID
    (48) basic_expr -> . basic_expr compare arith_expr
    (49) basic_expr -> . arith_expr
    (34) type -> . INT
    (35) type -> . FLOAT
    (36) type -> . VOID
    (56) arith_expr -> . MINUS arith_expr
    (57) arith_expr -> . LPAREN arith_expr RPAREN
    (58) arith_expr -> . arith_expr PLUS arith_expr
    (59) arith_expr -> . arith_expr MINUS arith_expr
    (60) arith_expr -> . arith_expr TIMES arith_expr
    (61) arith_expr -> . arith_expr DIV arith_expr
    (62) arith_expr -> . ID
    (63) arith_expr -> . FNUM
    (64) arith_expr -> . INUM
    (65) arith_expr -> . TIMES ID
    (66) arith_expr -> . ADDRESS ID
    (67) arith_expr -> . ID LBRACKET arith_expr RBRACKET
    (68) arith_expr -> . TIMES ID LBRACKET arith_expr RBRACKET
    (69) arith_expr -> . ID LPAREN argument_list RPAREN

    RBRACE          shift and go to state 48
    IF              shift and go to state 52
    SEMICOLON       shift and go to state 56
    PRINT           shift and go to state 61
    ID              shift and go to state 62
    TIMES           shift and go to state 64
    LBRACE          shift and go to state 41
    FOR             shift and go to state 68
    RETURN          shift and go to state 69
    INCREMENT       shift and go to state 70
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    VOID            shift and go to state 9
    MINUS           shift and go to state 71
    LPAREN          shift and go to state 53
    FNUM            shift and go to state 72
    INUM            shift and go to state 73
    ADDRESS         shift and go to state 74

    genstmt                        shift and go to state 49
    mstmt                          shift and go to state 50
    umstmt                         shift and go to state 51
    expr                           shift and go to state 54
    stmt                           shift and go to state 55
    declaration                    shift and go to state 57
    stmt_block                     shift and go to state 58
    stmt_forloop                   shift and go to state 59
    stmt_return                    shift and go to state 60
    arith_expr                     shift and go to state 63
    incr_expr                      shift and go to state 65
    basic_expr                     shift and go to state 66
    type                           shift and go to state 67

state 46

    (39) stmt_list -> empty .

    RBRACE          reduce using rule 39 (stmt_list -> empty .)
    IF              reduce using rule 39 (stmt_list -> empty .)
    SEMICOLON       reduce using rule 39 (stmt_list -> empty .)
    PRINT           reduce using rule 39 (stmt_list -> empty .)
    ID              reduce using rule 39 (stmt_list -> empty .)
    TIMES           reduce using rule 39 (stmt_list -> empty .)
    LBRACE          reduce using rule 39 (stmt_list -> empty .)
    FOR             reduce using rule 39 (stmt_list -> empty .)
    RETURN          reduce using rule 39 (stmt_list -> empty .)
    INCREMENT       reduce using rule 39 (stmt_list -> empty .)
    INT             reduce using rule 39 (stmt_list -> empty .)
    FLOAT           reduce using rule 39 (stmt_list -> empty .)
    VOID            reduce using rule 39 (stmt_list -> empty .)
    MINUS           reduce using rule 39 (stmt_list -> empty .)
    LPAREN          reduce using rule 39 (stmt_list -> empty .)
    FNUM            reduce using rule 39 (stmt_list -> empty .)
    INUM            reduce using rule 39 (stmt_list -> empty .)
    ADDRESS         reduce using rule 39 (stmt_list -> empty .)


state 47

    (6) func_declaration -> type TIMES ID LPAREN params RPAREN stmt_block .

    INT             reduce using rule 6 (func_declaration -> type TIMES ID LPAREN params RPAREN stmt_block .)
    FLOAT           reduce using rule 6 (func_declaration -> type TIMES ID LPAREN params RPAREN stmt_block .)
    VOID            reduce using rule 6 (func_declaration -> type TIMES ID LPAREN params RPAREN stmt_block .)
    $end            reduce using rule 6 (func_declaration -> type TIMES ID LPAREN params RPAREN stmt_block .)


state 48

    (37) stmt_block -> LBRACE stmt_list RBRACE .

    INT             reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    FLOAT           reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    VOID            reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    $end            reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    RBRACE          reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    IF              reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    SEMICOLON       reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    PRINT           reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    ID              reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    TIMES           reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    LBRACE          reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    FOR             reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    RETURN          reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    INCREMENT       reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    MINUS           reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    LPAREN          reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    FNUM            reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    INUM            reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    ADDRESS         reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)
    ELSE            reduce using rule 37 (stmt_block -> LBRACE stmt_list RBRACE .)


state 49

    (38) stmt_list -> stmt_list genstmt .

    RBRACE          reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    IF              reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    SEMICOLON       reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    PRINT           reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    ID              reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    TIMES           reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    LBRACE          reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    FOR             reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    RETURN          reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    INCREMENT       reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    INT             reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    FLOAT           reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    VOID            reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    MINUS           reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    LPAREN          reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    FNUM            reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    INUM            reduce using rule 38 (stmt_list -> stmt_list genstmt .)
    ADDRESS         reduce using rule 38 (stmt_list -> stmt_list genstmt .)


state 50

    (14) genstmt -> mstmt .

    RBRACE          reduce using rule 14 (genstmt -> mstmt .)
    IF              reduce using rule 14 (genstmt -> mstmt .)
    SEMICOLON       reduce using rule 14 (genstmt -> mstmt .)
    PRINT           reduce using rule 14 (genstmt -> mstmt .)
    ID              reduce using rule 14 (genstmt -> mstmt .)
    TIMES           reduce using rule 14 (genstmt -> mstmt .)
    LBRACE          reduce using rule 14 (genstmt -> mstmt .)
    FOR             reduce using rule 14 (genstmt -> mstmt .)
    RETURN          reduce using rule 14 (genstmt -> mstmt .)
    INCREMENT       reduce using rule 14 (genstmt -> mstmt .)
    INT             reduce using rule 14 (genstmt -> mstmt .)
    FLOAT           reduce using rule 14 (genstmt -> mstmt .)
    VOID            reduce using rule 14 (genstmt -> mstmt .)
    MINUS           reduce using rule 14 (genstmt -> mstmt .)
    LPAREN          reduce using rule 14 (genstmt -> mstmt .)
    FNUM            reduce using rule 14 (genstmt -> mstmt .)
    INUM            reduce using rule 14 (genstmt -> mstmt .)
    ADDRESS         reduce using rule 14 (genstmt -> mstmt .)


state 51

    (15) genstmt -> umstmt .
